maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: ';' expected but ',' found.
      if (checkg()) {gauche(), avance()}
                             ^