maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
while (!estSurBiscuit()) {
  if ((getDirection()==Direction.NORTH) && !estFaceMur()) {avance()}
  else if (estFaceMur()) {
    while ((getDirection() != Direction.NORTH) || !estSurBiscuit()) {
      if (checkg()) {gauche(), avance()}
      else if (!estFaceMur()) {avance()}
      else {droite()}
    }
  } 
}
prendBiscuit()
}


def checkg():Boolean = {
  gauche()
  var r = !estFaceMur()
  droite()
  return r
}